Status bar: Keymap info not cleared after cancelling the operation #113273

Closed
opened 2023-10-05 07:50:51 +02:00 by Pratik Borhade · 2 comments
Member

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 532.03

Blender Version
Broken: version: 4.0, 4.1-04d4f735851833e26f65d98bfab1bca80476848d

Short description of error
Keymap info not cleared from status bar after cancelling the operation (when invoked from operator macro)
It seems redraw for status bar is not sent after canceling operation

Exact steps for others to reproduce the error

  • Open default GN workspace
  • Add node tree, select a node
  • Press G (notice status bar has updated)
  • cancel translate/attach operation with esc/RMB
**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 532.03 **Blender Version** Broken: version: 4.0, 4.1-`04d4f735851833e26f65d98bfab1bca80476848d` **Short description of error** Keymap info not cleared from status bar after cancelling the operation (when invoked from operator macro) It seems redraw for status bar is not sent after canceling operation **Exact steps for others to reproduce the error** - Open default GN workspace - Add node tree, select a node - Press G (notice status bar has updated) - cancel translate/attach operation with esc/RMB
Pratik Borhade added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-05 07:50:52 +02:00
Author
Member

Relevant commit: 42f8b49581

Relevant commit: 42f8b495815c95211ebd969283ea2bf47fa7c720
Author
Member

Quick fix:

diff --git a/source/blender/windowmanager/intern/wm_event_system.cc b/source/blender/windowmanager/intern/wm_event_system.cc
index b5a82c0143f..b9ac1acbdf8 100644
--- a/source/blender/windowmanager/intern/wm_event_system.cc
+++ b/source/blender/windowmanager/intern/wm_event_system.cc
@@ -2476,10 +2476,7 @@ static eHandlerActionFlag wm_handler_operator_call(bContext *C,

         if (retval & (OPERATOR_CANCELLED | OPERATOR_FINISHED)) {
           wm_operator_reports(C, op, retval, false);
-
-          if (op->type->modalkeymap) {
-            WM_window_status_area_tag_redraw(win);
-          }
+          WM_window_status_area_tag_redraw(win);
         }
         else {
           /* Not very common, but modal operators may report before finishing. */
Quick fix: ``` diff --git a/source/blender/windowmanager/intern/wm_event_system.cc b/source/blender/windowmanager/intern/wm_event_system.cc index b5a82c0143f..b9ac1acbdf8 100644 --- a/source/blender/windowmanager/intern/wm_event_system.cc +++ b/source/blender/windowmanager/intern/wm_event_system.cc @@ -2476,10 +2476,7 @@ static eHandlerActionFlag wm_handler_operator_call(bContext *C, if (retval & (OPERATOR_CANCELLED | OPERATOR_FINISHED)) { wm_operator_reports(C, op, retval, false); - - if (op->type->modalkeymap) { - WM_window_status_area_tag_redraw(win); - } + WM_window_status_area_tag_redraw(win); } else { /* Not very common, but modal operators may report before finishing. */ ```
Pratik Borhade self-assigned this 2023-10-05 08:19:55 +02:00
Pratik Borhade added this to the 4.0 milestone 2023-10-11 06:43:08 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-12 08:24:37 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113273
No description provided.