Fix #113273: Status bar: Keymap info not cleared after cancelling the operation

After 42f8b495815c95211ebd969283ea2bf47fa7c720, canceling the transform
operator in node editor does not clear keymaps info from status bar. This
can be fixed by always redrawing the status bar once operation is
cancelled/finished.